--- a/style.css
+++ b/style.css
@@ -5,14 +5,19 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+/*====General Styling====*/
+
 body {
 	text-align:center;
 	color:#333;
 	background:#2ecc71;
 }
 
+h1, h3, p, a {
+	font-family: 'Istok Web', sans-serif;
+}
+
 h1 {
-	font-family:sans-serif;
 	font-size:30px;
 }
 
@@ -25,7 +30,7 @@ img {
 }
 
 .wrapper {
-	margin:10% 10% 3% 10%;
+	margin:5% 10% 3% 10%;
 }
 
 input[type=text] {
@@ -42,6 +47,23 @@ input[type=submit] {
 	border:1px solid #19703e;
 }
 
+/*====CSS Loading Animation====*/
+
+.spinner {
+  padding-top:5%;
+  font-size:20px;
+  display:none;
+}
+
+.loading {
+  display:initial;
+}
+
+img {
+  margin-top:3%;
+}
+
+/*====Results====*/
 .results {
 	padding-top:3%;
 }
@@ -72,12 +94,15 @@ a.tweet, .addr {
 	/*padding-top:4%;*/
 }
 
+
+/*====Footer====*/
 footer {
 	padding-top:3%;
 }
 
 footer span {
 	color:#ce2029;
+	font-size:22px;
 }
 
 footer a {
