--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1, h3, p, a {
 }
 
 h1 {
-	font-size:30px;
+	font-size:35px;
 }
 
 h3 {
@@ -33,22 +33,17 @@ img {
 	margin:5% 5% 3% 5%;
 }
 
-input[type=text] {
-	padding:9px;
-	font-size:18px;
-}
-
 input[type=submit] {
 	font-size:18px;
 	padding:10px;
 	background:white;
-	color:#19703e;
+	color"#333;
 	border:1px solid #19703e;
 }
 
 /*====CSS Loading Animation====*/
 
-img {
+img.avocado {
   margin-top:3%;
 }
 
