--- a/style.css
+++ b/style.css
@@ -132,17 +132,11 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-/*====General Styling====*/
 body {
   background: #E0E0E0;
   color: #2F3633;
+  font-family: 'Karla', sans-serif;
   text-align: center; }
-
-h1,
-h3,
-p,
-a {
-  font-family: 'Karla', sans-serif; }
 
 h1 {
   font-size: 60px; }
@@ -167,7 +161,6 @@ p.dist,
 p.rating {
   font-size: 22px; }
 
-/*Walking & Driving Icons*/
 button {
   background-color: transparent;
   border: none; }
@@ -178,7 +171,6 @@ button {
 .toggleSVG {
   fill: #85AF58; }
 
-/*====Submit Button====*/
 input[type=submit] {
   background: #85AF58;
   border-radius: 20px;
@@ -190,7 +182,6 @@ input[type=submit] {
   padding: 15px;
   text-transform: uppercase; }
 
-/*====CSS Loading Animation====*/
 img.avocado {
   margin-top: 3%; }
 
@@ -201,11 +192,11 @@ svg#driving {
   border: 2px solid #155c33;
   padding: 20px; }
 
-a.walking {
+button .walking {
   margin-right: 1%; }
 
-a.walking,
-a.driving {
+button.walking,
+button.driving {
   display: inline-block;
   margin-top: 4%; }
 
@@ -248,7 +239,6 @@ a.driving {
   100% {
     opacity: 1; } }
 
-/*====Results====*/
 .results {
   margin: 3% 5% 3% 5%; }
 
@@ -260,9 +250,8 @@ a.driving {
   margin: 1%;
   padding: 1%;
   width: 31%; }
-
-.places img {
-  width: 95%; }
+  .places img {
+    width: 95%; }
 
 p.rating,
 p.dist {
@@ -281,25 +270,20 @@ p.dist {
 .fa {
   color: #155c33; }
 
-/*====Footer====*/
 footer {
   padding-top: 1%; }
-
-footer span {
-  color: #ce2029; }
-
-footer a {
-  color: #2F3633;
-  text-decoration: none; }
-
-footer p {
-  font-size: 16px;
-  margin: 0; }
+  footer span {
+    color: #ce2029; }
+  footer a {
+    color: #2F3633;
+    text-decoration: none; }
+  footer p {
+    font-size: 16px;
+    margin: 0; }
 
 p.credit {
   font-size: 14px; }
 
-/*=====MEDIA QUERIES======*/
 @media all and (max-width: 1100px) {
   .places {
     margin: 2%;
