--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ button.driving {
     opacity: 1; } }
 
 .results {
-  margin: 3% 5% 3% 5%; }
+  margin: 3% 5%; }
 
 .places {
   background: #ffffff;
