--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,6 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-
 // =========================== //
 // Colour Variables
 // =========================== //
@@ -153,7 +152,7 @@ button.driving {
 // Results
 // =========================== //
 .results {
-	margin: 3% 5% 3% 5%;
+	margin: 3% 5%;
 }
 
 .places {
