--- a/style.css
+++ b/style.css
@@ -146,12 +146,9 @@ h3 {
   font-size: 26px;
   margin: 10px 0;
   padding-bottom: 2%; }
-  @media (min-width: 768px) {
-    h3 {
-      min-height: 68px; } }
   @media (min-width: 1366px) {
     h3 {
-      min-height: initial; } }
+      font-size: 36px; } }
 
 p {
   font-size: 22px; }
@@ -197,16 +194,14 @@ svg#driving {
   border: 2px solid #155c33;
   padding: 20px; }
 
-button .walking {
-  margin-right: 1%; }
-
-button.walking,
-button.driving {
+button {
   display: inline-block;
   margin-top: 4%; }
-
-.waiting {
-  display: all; }
+  button:first-of-type {
+    margin-right: 1%; }
+  button:focus {
+    outline: none;
+    outline: #6b8f45 auto 5px; }
 
 .loading {
   display: none;
@@ -218,7 +213,7 @@ button.driving {
   -moz-animation: pitFade 1.2s infinite;
   -o-animation: pitFade 1.2s infinite;
   animation: pitFade 1.2s infinite;
-  animation-timing-function: ease-in; }
+  animation-timing-function: ease-in-out; }
 
 @-webkit-keyframes pitFade {
   0% {
@@ -253,49 +248,52 @@ button.driving {
       justify-content: space-between; } }
   @media (min-width: 1024px) {
     .results {
-      width: 3% 5%; } }
+      margin: 3% 5% 0; } }
+  @media (min-width: 1366px) {
+    .results {
+      margin: 0 5%; } }
 
-.places {
+.place-result {
   background: #ffffff;
   border-radius: 10px;
   border: 3px solid #ACBCB5;
+  display: flex;
+  flex-direction: column;
   margin: 10px 0;
   padding: 10px;
   width: 100%; }
   @media (min-width: 768px) {
-    .places {
+    .place-result {
       width: calc(100% / 2.05); } }
   @media (min-width: 1024px) {
-    .places {
+    .place-result {
       width: calc(100% / 3.09); } }
-  .places:first-of-type {
+  .place-result:first-of-type {
     margin: 0; }
     @media (min-width: 768px) {
-      .places:first-of-type {
+      .place-result:first-of-type {
         margin: 10px 0; } }
-  .places img {
+  .place-result img {
     width: 95%;
-    margin-top: 2%; }
-
-p.dist,
-p.rating {
-  font-size: 22px;
-  margin: 8px; }
-
-.rating {
-  margin-top: 8px; }
-
-.fa-home {
-  color: #155c33;
-  margin-right: 8px; }
-
-.addr {
-  display: block;
-  color: #000000;
-  font-size: 17px;
-  line-height: 1.7;
-  text-align: center;
-  text-decoration: none; }
+    margin: 2% auto; }
+  .place-result .content {
+    flex: 1; }
+  .place-result .dist,
+  .place-result .rating {
+    font-size: 22px;
+    margin: 8px; }
+  .place-result .rating {
+    margin-top: 8px; }
+  .place-result .fa-home {
+    color: #155c33;
+    margin-right: 8px; }
+  .place-result .addr {
+    display: block;
+    color: #000000;
+    font-size: 17px;
+    line-height: 1.7;
+    text-align: center;
+    text-decoration: none; }
 
 footer {
   padding-top: 1%; }
